--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.3.7",
+    "jquery": "^3.3.1",
+    "lib-flexible": "^0.3.2",
+    "px2rem-loader": "^0.1.9",
     "qrcodejs": "^1.0.0",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.2",
